force-app/main/default/objects/Classe__c/Classe__c.object-meta.xml
<CustomObject>
    <description>Classes de aula.</description>
    <label>Classe</label>
    <nameField>
        <label>Nome de Classe</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>