force-app/main/default/objects/Classe__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <description>Codigo classe</description>
    <externalId>true</externalId>
    <inlineHelpText>codigo classe</inlineHelpText>
    <label>Codigo</label>
    <type>AutoNumber</type>
</CustomField>