force-app/main/default/objects/Classe__c/fields/Escola__c.field-meta.xml
<CustomField>
    <fullName>Escola__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Escola da classe</description>
    <label>Escola</label>
    <referenceTo>Escola__c</referenceTo>
    <relationshipLabel>Classes</relationshipLabel>
    <relationshipName>Classes</relationshipName>
    <type>Lookup</type>
</CustomField>