force-app/main/default/objects/Classe__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Escolher uma opção</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Criado</fullName>
            </value>
            <value>
                <fullName>Em curso</fullName>
            </value>
            <value>
                <fullName>Formada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>